# splicegrapher-next

./: .gitignore  .pre-commit-config.yaml  MODERN_ASSAY_MANIFESTO.md  NOTICE  PROVENANCE.md  README.md  pyproject.toml  splicegrapher.toml.example
.github/workflows/: docs-notebooks-pages.yml  notebook-smoke.yml  quality-gates.yml
LICENSES/: README.md
SpliceGrapher/: SpliceGraph.py  SpliceGrapher.cfg
SpliceGrapher/core/: __init__.py  enum_coercion.py  enums.py  graph_math.py  interval_helpers.py  splice_graph.py  splicing_events.py  types.py
SpliceGrapher/formats/: GeneModel.py  alignment_io.py  annotation_io.py  depth_io.py  fasta.py  gene_model.py  junction.py  loader.py  model_domain.py  model_index.py  models.py  polars_gff.py  polars_gff_benchmark.py  serializers.py  shortread_compat.py
SpliceGrapher/shared/: ShortRead.py  collection_utils.py  config.py  config_utils.py  file_utils.py  format_utils.py  header_utils.py  logging_utils.py  process.py  process_utils.py  progress.py  streams.py  utils.py
benchmarks/: __init__.py  fasta_backend_probe.py  polars_gff_benchmark.py
docs/: configuration.md  workflow-integrations.md
docs/adr/: 2026-03-06-splicegraph-networkx-boundary.md  2026-03-25-fasta-backend-pyfastx-evaluation.md
docs/notebooks/: 01_legacy_tutorial_foundation.ipynb  02_modern_dataset_track.ipynb  README.md
docs/plans/: 2026-03-01-enum-harmonization-design.md  2026-03-01-enum-harmonization-implementation-plan.md  2026-03-07-alignment-io-contract-cleanup-design.md  2026-03-07-alignment-io-contract-cleanup-implementation-plan.md  2026-03-07-polars-benchmark-relocation-design.md  2026-03-07-polars-benchmark-relocation-implementation-plan.md  2026-03-07-splicegraph-hard-cut-design.md  2026-03-07-splicegraph-hard-cut-implementation-plan.md  2026-03-08-gene-model-monolith-split-design.md  2026-03-08-gene-model-monolith-split-implementation-plan.md  2026-03-09-core-splicegraph-snake-case-hard-cut-design.md  2026-03-09-core-splicegraph-snake-case-hard-cut-implementation-plan.md  2026-03-09-fasta-package-hard-cut-design.md  2026-03-09-fasta-package-hard-cut-implementation-plan.md  2026-03-09-models-package-cut-design.md  2026-03-09-models-package-cut-implementation-plan.md  2026-03-09-parser-facade-cleanup-design.md  2026-03-09-parser-facade-cleanup-implementation-plan.md  2026-03-09-shared-process-hard-cut-design.md  2026-03-09-shared-process-hard-cut-implementation-plan.md  2026-03-10-alignment-io-package-split-design.md  2026-03-10-alignment-io-package-split-implementation-plan.md  2026-03-10-annotation-io-hard-cut-design.md  2026-03-10-annotation-io-hard-cut-implementation-plan.md  2026-03-10-gene-model-domain-split-design.md  2026-03-10-gene-model-domain-split-implementation-plan.md  2026-03-10-gene-model-handlers-split-design.md  2026-03-10-gene-model-handlers-split-implementation-plan.md  2026-03-10-gene-model-package-cut-design.md  2026-03-10-gene-model-package-cut-implementation-plan.md  2026-03-10-junction-domain-hard-cut-design.md  2026-03-10-junction-domain-hard-cut-implementation-plan.md  2026-03-12-gene-model-gff-typing-hard-clean-design.md  2026-03-12-gene-model-gff-typing-hard-clean-implementation-plan.md  2026-03-12-polars-gff-hard-clean-design.md  2026-03-12-polars-gff-hard-clean-implementation-plan.md  2026-03-15-core-splicegraph-package-cut-design.md  2026-03-15-core-splicegraph-package-cut-implementation-plan.md  2026-03-16-gene-model-internal-split-design.md  2026-03-16-gene-model-internal-split-implementation-plan.md  (+6 more)
docs/site/: build_pages_site.py
docs/testing/: 2026-03-25-fasta-backend-probe.json  interval-overlap-benchmark.md  parity-harness.md  polars-gff-benchmark.md  polars_gff_benchmark_results.json  polars_gff_benchmark_results.md
docs/tutorials/: dataset_manifest.toml  datasets.md
tests/: __init__.py  test_alignment_io_constants.py  test_alignment_io_parity.py  test_alignment_io_process_utils_boundary.py  test_annotation_io.py  test_clean_invariant_guard.py  test_collection_utils.py  test_config_loading.py  test_config_utils.py  test_core_enums.py  test_core_shared_import_smoke.py  test_core_types.py  test_depth_io.py  test_fasta_backend_probe.py  test_fasta_io.py  test_fasta_module_layout.py  test_file_utils.py  test_format_utils.py  test_gene_model.py  test_gene_model_gff_module_layout.py  test_gene_model_gff_parser.py  test_gene_model_gff_record_handlers_boundary.py  test_gene_model_module_layout.py  test_gene_model_package_layout.py  test_gene_model_serializers.py  test_graph_math.py  test_header_utils.py  test_integration_simple.py  test_interval_helpers.py  test_interval_overlap_benchmark_runner.py  test_junction.py  test_logging_utils.py  test_notebook_smoke.py  test_pages_site_builder.py  test_parity_harness_matrix.py  test_polars_gff.py  test_polars_gff_benchmark.py  test_polars_gff_benchmark_runner.py  test_process.py  test_process_utils.py  (+8 more)
(+48 files in other folders)
