[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "splicegrapher-next"
version = "0.1.0a1"
description = "Python 3 modernization / continuation of SpliceGrapher for shared iDiffIR and TAPIS use"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Mixed licensing; see LICENSE and provenance notices." }
authors = [
  { name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" },
]
maintainers = [
  { name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" },
]
keywords = [
  "bioinformatics",
  "rna-seq",
  "splicing",
  "splice-graph",
  "genomics",
  "visualization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pysam",
  "gffutils>=0.13",
  "networkx>=3.4",
]

[project.urls]
Homepage = "https://github.com/bio-comp/splicegrapher-next"
Repository = "https://github.com/bio-comp/splicegrapher-next"
Issues = "https://github.com/bio-comp/splicegrapher-next/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["SpliceGrapher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: slow-running tests",
  "integration: integration tests using external-style fixtures",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
  # Legacy cleanup is incremental during migration.
  "E402",
]

[tool.ruff.lint.per-file-ignores]
# Legacy extraction slices are landed with behavior-parity priority before
# broad style normalization.
"SpliceGrapher/SpliceGraph.py" = ["E", "F"]
"SpliceGrapher/shared/streams.py" = ["E", "F"]
"SpliceGrapher/shared/utils.py" = ["E", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
show_error_codes = true
