[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "splicegrapher-next"
version = "0.1.0a1"
description = "Python 3 modernization / continuation of SpliceGrapher for general use, with iDiffIR and TAPIS compatibility priorities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Mixed licensing; see LICENSE and provenance notices." }
authors = [
  { name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" },
]
maintainers = [
  { name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" },
]
keywords = [
  "bioinformatics",
  "rna-seq",
  "splicing",
  "splice-graph",
  "genomics",
  "visualization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pysam",
  "gffutils>=0.13",
  "networkx>=3.4",
  "pyfaidx>=0.9",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/bio-comp/splicegrapher-next"
Repository = "https://github.com/bio-comp/splicegrapher-next"
Issues = "https://github.com/bio-comp/splicegrapher-next/issues"

[dependency-groups]
dev = [
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "nbclient>=0.10.4",
  "nbformat>=5.10.4",
  "nbconvert>=7.17.0",
  "ipykernel>=7.2.0",
  "jupyter-book==1.0.0",
  "pydata-sphinx-theme>=0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["SpliceGrapher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: slow-running tests",
  "integration: integration tests using external-style fixtures",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "T20", "TID"]
ignore = [
  # Legacy cleanup is incremental during migration.
  "E402",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging".msg = "Use structlog for SGN logging."
"loguru".msg = "Use structlog for SGN logging."
"requests".msg = "Use httpx (async-first) for outbound HTTP."

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
show_error_codes = true
